# Haskell

./: README.md
00_roadmap/: README.md
01_fundamentos/00_primeros_pasos/: README.md
01_fundamentos/00_primeros_pasos/01_hello-world/: hello-world.cabal
01_fundamentos/00_primeros_pasos/01_hello-world/app/: Main.hs
01_fundamentos/00_primeros_pasos/01_hello-world/src/: Lib.hs
01_fundamentos/01_sintaxis_basica/: README.md
01_fundamentos/01_sintaxis_basica/matematicas-basica/: CHANGELOG.md  README.md  matematicas-basica.cabal  package.yaml
01_fundamentos/01_sintaxis_basica/matematicas-basica/app/: Main.hs
01_fundamentos/01_sintaxis_basica/matematicas-basica/src/Matematicas/: Basicas.hs  Estadistica.hs  Geomatria.hs
01_fundamentos/02_tipos_basicos_y_operadores/: README.md
01_fundamentos/02_tipos_basicos_y_operadores/validador-de-datos/: CHANGELOG.md  README.md  package.yaml  validador-de-datos.cabal
01_fundamentos/02_tipos_basicos_y_operadores/validador-de-datos/src/: Validador.hs
02_estructuras_fundamentales/01_listas/: README.md
